[tool.poetry]
name = "moshan"
version = "0.1.0"
description = ""
authors = ["fulder <misad90@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.35.0"
httpx = "^0.27.2"

[tool.poetry.group.pytest]
optional = true

[tool.poetry.group.pytest.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-html = "^4.1.1"
pytest-mock = "^3.14.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[tool.poetry.group.layers-api]
optional = true

[tool.poetry.group.layers-api.dependencies]
requests = "^2.32.3"

[tool.poetry.group.layers-databases]
optional = true

[tool.poetry.group.layers-databases.dependencies]
python-dateutil = "^2.9.0"
dynamodb-json = "^1.4"

[tool.poetry.group.layers-fastapi]
optional = true

[tool.poetry.group.layers-fastapi.dependencies]
fastapi = "^0.115.0"
fastapi-utils = "^0.7.0"
mangum = "^0.19.0"
pydantic = "^2.9.2"
typing-inspect = "^0.9.0"

[tool.poetry.group.layers-utils]
optional = true

[tool.poetry.group.layers-utils.dependencies]
loguru = "^0.7.2"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
pyjwt = "^2.9.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html --cov=src -vv"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
experimental-string-processing = true
