[tool.poetry]
name = "moshan"
version = "0.1.0"
description = ""
authors = ["fulder <misad90@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.42.1"
httpx = "^0.28.1"

[tool.poetry.group.pytest]
optional = true

[tool.poetry.group.pytest.dependencies]
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-html = "^4.2.0"
pytest-mock = "^3.15.1"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
flake8 = "^7.3.0"

[tool.poetry.group.layers-api]
optional = true

[tool.poetry.group.layers-api.dependencies]
requests = "^2.32.5"

[tool.poetry.group.layers-databases]
optional = true

[tool.poetry.group.layers-databases.dependencies]
python-dateutil = "^2.9.0"
dynamodb-json = "^1.4"

[tool.poetry.group.layers-fastapi]
optional = true

[tool.poetry.group.layers-fastapi.dependencies]
fastapi = "^0.128.5"
fastapi-utils = "^0.8.0"
mangum = "^0.21.0"
pydantic = "^2.12.5"
typing-inspect = "^0.9.0"

[tool.poetry.group.layers-utils]
optional = true

[tool.poetry.group.layers-utils.dependencies]
loguru = "^0.7.3"

[tool.poetry.group.api]
optional = true

[tool.poetry.group.api.dependencies]
pyjwt = "^2.11.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov-report html --cov=src -vv"

[tool.isort]
profile = "black"

[tool.black]
line-length = 80
experimental-string-processing = true
